--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,12 +2,22 @@ spring:
     application:
         name: poe-gamble
     datasource:
-        url: jdbc:h2:mem:test
+        url: jdbc:h2:mem:testdb
         username: username
         password: password
         driver-class-name: org.h2.Driver
+    h2:
+      console:
+          enabled: true
+          settings:
+              web-allow-others: true
     jpa:
         database-platform: org.hibernate.dialect.H2Dialect
+        hibernate:
+            ddl-auto: update
+        properties:
+          hibernate:
+              format_sql: true
 
 server:
     port: 8080
