--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
     application:
         name: poe-gamble
     datasource:
-        url: jdbc:h2:mem:testdb
+        url: jdbc:h2:./db
         username: username
         password: password
         driver-class-name: org.h2.Driver
