--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     //implementation 'org.springframework.cloud:spring-cloud-starter-config'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'org.postgresql:postgresql'
+    //runtimeOnly 'com.h2database:h2'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
