--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,22 +2,19 @@ spring:
     application:
         name: poe-gamble
     datasource:
-        url: jdbc:h2:./db
-        username: username
-        password: password
-        driver-class-name: org.h2.Driver
-    h2:
-      console:
-          enabled: true
-          settings:
-              web-allow-others: true
+        url: jdbc:postgresql://43.203.98.225:4202/poegamble_test
+        username: poetest
+        password: Alstn124124@@
+        driver-class-name: org.postgresql.Driver
+
     jpa:
-        database-platform: org.hibernate.dialect.H2Dialect
+        database-platform: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
             ddl-auto: update
         properties:
           hibernate:
               format_sql: true
+              globally_quoted_identifiers: true
 server:
     port: 8080
 
